<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F7F7F7"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/flashlight_icon"
            android:src="@drawable/flashlight" />

        <Switch
            android:id="@+id/flashlightSwitch"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="ON or OFF" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:text="ENTER"
        app:iconTint="#E91E63" />

</LinearLayout>